Bug 899296 - Restore bytecode-level constant folding in lazily compiled functions. r=jorendorff, a=akeybl